--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "rockpaperscissors",
   "version": "0.1.0",
   "private": true,
+  "homepage": "https://asusbit.github.io/rockpaperscissors/",
   "dependencies": {
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
@@ -14,6 +15,8 @@
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
   },
@@ -36,6 +39,7 @@
     ]
   },
   "devDependencies": {
-    "tailwindcss": "^3.4.10"
+    "tailwindcss": "^3.4.10",
+    "gh-pages": "^5.0.0"
   }
 }
